@@ -3799,6 +3799,7 @@ void SettingInitGlobal(PyMOLGlobals * G, int alloc, int reset_gui, int use_defau
     set_i(I, cSetting_label_distance_digits, -1);
     set_i(I, cSetting_label_angle_digits, -1);
     set_i(I, cSetting_label_dihedral_digits, -1);
+    set_s(I, cSetting_label_anchor, "CA");
     set_b(I, cSetting_surface_negative_visible, 0);
     set_color(I, cSetting_surface_negative_color, "grey50");
     set_b(I, cSetting_mesh_negative_visible, 0);
