@@ -868,6 +868,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 #define cSetting_pdb_ignore_conect          632
 #define cSetting_editor_bond_cycle_mode     633
 #define cSetting_movie_quality              634
+#define cSetting_label_anchor               635
 
 /* when you add a new setting also remember:
    layer1/Setting.c
