@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2010-02-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* label_anchor setting
+
 2010-02-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* movie_quality setting
